using UnityEngine;
using System.Collections;

public class HTAnimatorParamsConstants {

	#region
	
	public const string WindStateParam = "Wind State";
	public const string WindSingleSlightForward = "Single Slight Forwards";
	public const string WindSingleSlightBackward = "Single Slight Backwards";
	public const string WindIdle = "Idle";
	public const string WindSlight = "Slight";
	public const string WindStrong = "Strong";
	public const string WindBlustery = "Blustery";
	
	public const int WindStateIdle = 0;
	public const int WindStateSlight = 1;
	public const int WindStateStrong = 2;
	public const int WindStateBlustery = 3;
	
	
	#endregion
}
